Reduce Main file warning